--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -462,7 +462,7 @@
     margin: 0;
     padding: 0;
     font-weight: normal;
-    margin-bottom: 100px;
+    // margin-bottom: 100px;
   }
   li {
     @include b4_12px_montserrat_charcoal();
