--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -414,6 +414,14 @@ font-weight: bold;
   margin-top: 150px;
 }
 
+.paddBottom-0 {
+  padding-bottom: 0px;
+}
+
+.paddBottom-40 {
+  padding-bottom: 40px;
+}
+
 .paddBottom-20 {
   padding-bottom: 20px;
 }
