--- a/src/components/CeriseCard/styles.scss
+++ b/src/components/CeriseCard/styles.scss
@@ -64,7 +64,7 @@
             display: flex;
             justify-content: space-between;
             .progressbar-wrp-container{
-                width: 75%;
+                width: 300%;
                 margin: auto 0;
                 &.inactive{
                     display: none;
@@ -82,7 +82,13 @@
             .info{
                 padding-left: 5px;
                 border-radius: 15px;
-                width: 8%;
+                // width: 8%;
+                transition: all .2s ease;
+
+                display: flex;
+                justify-content: flex-end;
+                align-content: center;
+                width:100%;
                 // &:hover{
                 //     background-color: white;
                 //     padding: 0 0 0 5px;
@@ -97,26 +103,30 @@
                     padding: 0 0 0 5px;
                     width: 100%;
                     text-align: left !important;
+                    transition: all .2s ease;
                 }
                 .info-icon{
                     background: $white;
-                    width: 30px;
-                    border-radius: 30px;
-                    height: 30px;
+                    width: 25px;
+                    border-radius: 25px;
+                    height: 25px;
                     p{
                         text-align: center;
-                        padding:5px;
+                        padding:2px;
                         font-style: italic;
                         color: $cerise;
                         @include h6_16px_lora_charcoal();
                     }
                     &.inactive {
-                        display: none;
+                        width: 100%;
+                        p{
+                            display: none;
+                        }
                     }
                 }
                 .info-text{
                     display: none;
-                    line-height: 20px;
+                    line-height: 25px;
                     // position: absolute;
                     // top: 0;
                     // left: 50px;
