--- a/src/server/templates/index.pug
+++ b/src/server/templates/index.pug
@@ -223,6 +223,7 @@ html(lang='en')
     body
         script(src='https://platform.linkedin.com/in.js', type='text/javascript').
           lang: en_US
+        script(type='IN/Share', data-url='https://www.linkedin.com').
         #fb-root
         script(async='', defer='', crossorigin='anonymous', src='https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v15.0', nonce='WeI6CMhM')
         noscript.
