--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -9,12 +9,17 @@
       width: 430px;
       min-height: 360px;
       .gc-tnc {
-        height: 100%;
-      padding: 50px 0 30px 0;
-      // overflow-y: scroll;
-      &.top-image{
-        padding: 20px;
-      }
+        height: auto;
+        padding: 50px 0 30px 0;
+        // overflow-y: scroll;
+        &.top-image{
+          padding: 20px;
+        }
+        &.left-image{
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+        }
       }
       p {
         line-height: 20px;
@@ -1068,6 +1073,7 @@
   margin-top: 20px;
   letter-spacing: 0.5px;
   font-weight: lighter;
+  padding: 0px 20px;
 }
 
 .two-button {
@@ -1144,7 +1150,7 @@
   }
   .left-image-cta{
     margin-bottom: 30px;
-    border: 1px solid $aqua-bold;
+    // border: 1px solid $aqua-bold;
     color: $aqua-bold;
     font-family: $font-Montserrat;
     font-size: 12px;
@@ -1156,10 +1162,11 @@
     align-items: center;
     justify-content: center;
     letter-spacing: 0.5px;
-    &:hover{
-      color: $white;
-      background: $aqua-bold;
-    }
+    background: #ab1e56;
+    // &:hover{
+    //   color: $white;
+    //   background: $aqua-bold;
+    // }
   }
   .popup-cta{
     color: #fff;
@@ -1201,14 +1208,6 @@
       }
     }
   }
-  &.top-image{
-    .disclaimer{
-      p{
-        // padding: 0px 25%;
-        line-height: 15px;
-      }
-    }
-  }
   &.two-cta{
     .disclaimer{
       p{
@@ -1224,6 +1223,13 @@
 //     padding: 30px 0 30px 0 !important;
 //   }
 // }
+
+@media (min-width: 992px){
+  .left-image-template-container{
+    height: 700px;
+    width: 615px;
+  }
+}
 
 @media (max-width: 992px){
   // .left-image{
