--- a/src/components/Popups/styles.scss
+++ b/src/components/Popups/styles.scss
@@ -19,6 +19,7 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
+          gap: 30px;
         }
       }
       p {
@@ -508,7 +509,7 @@
     position: relative;
     transform: translateX(-50%);
     left: 50%;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
   }
   .cerise-btn80 {
     width: 80%;
@@ -1070,7 +1071,7 @@
   font-size: 10px;
   font-family: $font-Lato;
   // margin: 10px;
-  margin-top: 20px;
+  // margin-top: 20px;
   letter-spacing: 0.5px;
   font-weight: lighter;
   padding: 0px 20px;
@@ -1136,7 +1137,10 @@
   .heading{
     @include h3_20px_lora_charcoal();
     letter-spacing: 0.5px;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
+    h1 {
+      margin: 0px;
+    }
     p{
       line-height: 30px;
     }
@@ -1149,7 +1153,7 @@
     padding: 0px;
   }
   .left-image-cta{
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     // border: 1px solid $aqua-bold;
     color: $aqua-bold;
     font-family: $font-Montserrat;
