--- a/src/containers/plp/styles.scss
+++ b/src/containers/plp/styles.scss
@@ -191,6 +191,9 @@
         }
         &:last-child {
           float: right;
+          height: 12px;
+          width: 12px;
+          color: #4C4C4C;
         }
       }
     }
@@ -310,7 +313,7 @@
   &::-webkit-scrollbar {
     display: none;
   }
-  margin: 0px 0px 30px 20px;
+  margin: 0px 30px 0px 30px;
 
   @media screen and (max-width: 992px){
     height: calc(100% - 60px);
@@ -397,6 +400,7 @@
     }
     &:after {
       content: '-';
+      font-size: 43px;
     }
   }
   .menulevel2 {
