removed cursor  pointer

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1114,7 +1114,7 @@ button {
 }
 
 .search-block-page {
-// cursor: pointer;
+cursor: pointer;
 input {
   width: 100%;
   background-color: $white;
