--- a/src/containers/search/styles.scss
+++ b/src/containers/search/styles.scss
@@ -743,7 +743,7 @@ input[type="radio"]:checked, [type="checkbox"]:not(:checked),
 }
 
 .search-block-page {
-  cursor: pointer;
+  // cursor: pointer;
   input {
     width: 100%;
     background-color: $white;
