code added for menu

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -30,10 +30,13 @@
   }
 }
 
+.header-index {
+  z-index: 1000009 !important;
+}
 .header-container {
     position: fixed;
     top: $header-top;
-    z-index: 1000009;
+    z-index: 12;
     width: 100%;
     background-color: rgb(249, 248, 245);
     height: $header-height;
