--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -26,6 +26,13 @@
     height: 100%;
     transform: translate(0,0);
   }
+  &.bottom-align{
+    top: unset;
+    left: unset;
+    bottom: 0;
+    transition: transform 1.5s ease-in;
+    transform: translateY(0);
+  }
 }
 
 @media screen and (max-width: 992px) {
