--- a/src/components/Modal/styles.scss
+++ b/src/components/Modal/styles.scss
@@ -29,9 +29,16 @@
   &.bottom-align{
     top: unset;
     left: unset;
+    transform: unset;
     bottom: 0;
-    transition: transform 1.5s ease-in;
-    transform: translateY(0);
+  }
+  &.bottom-align-slide-up{
+    top: unset;
+    left: unset;
+    transform: unset;
+    bottom: 0px;
+    max-height: 0px;
+    transition: max-height 0.5s; 
   }
 }
 
