cerise dashboard design

--- a/src/components/CeriseCard/styles.scss
+++ b/src/components/CeriseCard/styles.scss
@@ -15,141 +15,152 @@
            width: 50%;
         }
     }
-    .cerise-card-left-wrp{
-        height: 100%;
-        background: $cerise;
-        padding: 30px;
-        width: 414px;
+}
 
-        @media (max-width: 992px) {
-            width: 50%;
+.cerise-card-left-wrp{
+    height: 100%;
+    background: $cerise;
+    padding: 30px;
+    width: 414px;
+
+    @media (max-width: 992px) {
+        width: 50%;
+        &.mobile-width{
+            width: 100%;
+        }
+    }
+    
+    .header{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 30px;
+
+        .heading{
+            @include h2_24px_lora_white();
         }
         
-        .header{
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 30px;
-
-            .heading{
-                @include h2_24px_lora_white();
-            }
-            
-            .sub-heading{
-                border-bottom: 1px solid;
-                margin: auto 0;
-                @include b4_12px_montserrat_light_white();
-            }
-        }
-        .name-header{
-            margin-bottom: 30px;
-            .greeting{
-                @include h6_16px_lora_white();
-            }
-            .name{
-                @include h2_24px_lora_white();
-            }
-        }
-        .cerise-table{
-            margin-bottom: 30px;
-            .cerise-row{
-                display: flex;
-                justify-content: space-between;
-                margin-bottom: 15px;
-                @include b3_14px_montserrat_white();
-            }
-        }
-       
-        .info-wrp{
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            .progressbar-wrp-container{
-                width: 300%;
-                margin: auto 0;
-                &.inactive{
-                    display: none;
-                }
-                .progressbar-wrp{
-                    border-radius: 10px;
-                    background-color: $cerise-light;
-                    .progressbar{
-                        border-radius: 10px;
-                        background-color: $white;
-                    }
-                }
-            }
-          
-            .info{
-                padding-left: 5px;
-                border-radius: 15px;
-                // width: 8%;
-                transition: all .2s ease;
-
-                display: flex;
-                justify-content: flex-end;
-                align-content: center;
-                width:100%;
-                // &:hover{
-                //     background-color: white;
-                //     padding: 0 0 0 5px;
-                //     width: 315px;
-                //     text-align: left !important;
-                //     .info-text{
-                //         display: block;
-                //     }
-                // }
-                &.active {
-                    background-color: $white;
-                    padding: 0 0 0 5px;
-                    width: 100%;
-                    text-align: left !important;
-                    transition: all .2s ease;
-                }
-                .info-icon{
-                    background: $white;
-                    width: 25px;
-                    border-radius: 25px;
-                    height: 25px;
-                    p{
-                        text-align: center;
-                        padding:2px;
-                        font-style: italic;
-                        color: $cerise;
-                        @include h6_16px_lora_charcoal();
-                    }
-                    &.inactive {
-                        width: 100%;
-                        p{
-                            display: none;
-                        }
-                    }
-                }
-                .info-text{
-                    display: none;
-                    line-height: 25px;
-                    // position: absolute;
-                    // top: 0;
-                    // left: 50px;
-                    margin: 0 10px;
-                    transition: all .2s ease;
-                    @include b5_10px_montserrat_charcoal();
-
-                    .close{
-                        color: $cerise;
-                        float: right;
-                    }
-
-                    &.active{
-                        display: block;
-                    }
-                }
-
-            }
-
-        }
-        .footer{
-            margin-top: 25px;
+        .sub-heading{
+            border-bottom: 1px solid;
+            margin: auto 0;
             @include b4_12px_montserrat_light_white();
         }
     }
+    .name-header{
+        margin-bottom: 30px;
+        .greeting{
+            @include h6_16px_lora_white();
+        }
+        .name{
+            @include h2_24px_lora_white();
+        }
+        .email{
+            @include b4_12px_montserrat_white();
+        }
+    }
+    .cerise-table{
+        margin-bottom: 30px;
+        .cerise-row{
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 15px;
+            @include b3_14px_montserrat_white();
+        }
+    }
+   
+    .info-wrp{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        .progressbar-wrp-container{
+            width: 300%;
+            margin: auto 0;
+            &.inactive{
+                display: none;
+            }
+            .progressbar-wrp{
+                border-radius: 10px;
+                background-color: $cerise-light;
+                .progressbar{
+                    border-radius: 10px;
+                    background-color: $white;
+                }
+            }
+        }
+      
+        .info{
+            padding-left: 5px;
+            border-radius: 15px;
+            // width: 8%;
+            transition: all .2s ease;
+
+            display: flex;
+            justify-content: flex-end;
+            align-content: center;
+            width:100%;
+            // &:hover{
+            //     background-color: white;
+            //     padding: 0 0 0 5px;
+            //     width: 315px;
+            //     text-align: left !important;
+            //     .info-text{
+            //         display: block;
+            //     }
+            // }
+            &.active {
+                background-color: $white;
+                padding: 0 0 0 5px;
+                width: 100%;
+                text-align: left !important;
+                transition: all .2s ease;
+            }
+            .info-icon{
+                background: $white;
+                width: 25px;
+                border-radius: 25px;
+                height: 25px;
+                p{
+                    text-align: center;
+                    padding:2px;
+                    font-style: italic;
+                    color: $cerise;
+                    @include h6_16px_lora_charcoal();
+                }
+                &.inactive {
+                    width: 100%;
+                    p{
+                        display: none;
+                    }
+                }
+            }
+            .info-text{
+                display: none;
+                line-height: 25px;
+                // position: absolute;
+                // top: 0;
+                // left: 50px;
+                margin: 0 10px;
+                transition: all .2s ease;
+                @include b5_10px_montserrat_charcoal();
+
+                .close{
+                    color: $cerise;
+                    float: right;
+                }
+
+                &.active{
+                    display: block;
+                }
+            }
+
+        }
+
+    }
+    .footer{
+        margin-top: 25px;
+        @include b4_12px_montserrat_light_white();
+    }
+}
+
+.gold-background{
+    background-color: $gold;
 }
