--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -1191,7 +1191,7 @@ $list: $grey 92%, $white 8%;
   color: $charcoal19;
 }
 
-@mixin error_msg_charcoal{
+@mixin error_msg_cerise{
   font-family: $font-Lora;
   font-size: 13px;
   font-style: italic;
