--- a/src/components/OtpComponent/styles.scss
+++ b/src/components/OtpComponent/styles.scss
@@ -438,7 +438,7 @@ hr {
   opacity: 1;
   padding: 55px 80px 40px 80px;
   max-width: 500px;
-  height: 400px;
+  max-height: 500px;
   margin: auto;
 
   @media screen and (max-width: 1100px) {
@@ -497,7 +497,7 @@ hr {
   }
 
   .otp-error{
-    @include error-msg();
+    @include error_msg_cerise();
     padding-top: 10px;
     text-align: left;
   }
@@ -535,8 +535,8 @@ hr {
     padding-top: 25px;
     border-bottom: 1px solid $charcoal19;
     &:hover{
-      color: $aqua;
-      border-bottom: 1px solid $aqua;
+      color: #3C7979 !important;
+      border-bottom: 1px solid #3C7979 !important;
     }
 
   }
