CMS inline styles done

--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -658,7 +658,7 @@
   content: "+";
   padding-left: 10px;
   float: right;
-  color: #000;
+  // color: #000;
   font-size: 25px;
 }
 
@@ -666,7 +666,7 @@
   content: "-";
   padding-left: 10px;
   float: right;
-  color: #000;
+  // color: #000;
   font-size: 25px;
 }
 
