--- a/src/containers/myAccount/components/styles.scss
+++ b/src/containers/myAccount/components/styles.scss
@@ -2,11 +2,27 @@
 @import "../../../styles/partials/mixins";
 
 .form-heading {
-  font-size: 25px;
-  font-family: $font-Serif;
+  @include h2_24px_lora_charcoal();
   line-height: 50px;
   margin-top: 30px;
 }
+.form-subheading{
+  @include b4_12px_montserrat_charcoal();
+  letter-spacing: 0.5px;
+  padding: 0px 52px;
+}
+
+.disabledInput{
+  input{
+    background: #fff !important;
+    color: #9F9F9F !important;
+  }
+  select{
+    background: #fff !important;
+    color: #9F9F9F !important;
+  }
+}
+
 .form-heading-multi {
   line-height: 36px;
 }
@@ -380,7 +396,49 @@
   line-height: 15px;
 }
 
+.input-default{
+  font-family: $font-Montserrat;
+  font-size: 12px !important;
+  font-weight: $regular;
+  &::placeholder{
+    font-family: $font-Montserrat;
+    font-size: 12px !important;
+    font-weight: $regular;
+    color: #9f9f9f !important;
+  }
+}
+
 .login-form {
+  input[type="text"], input[type="date"]{
+    font-family: $font-Montserrat;
+    font-size: 12px;
+    font-weight: $regular;
+    &::placeholder{
+      font-family: $font-Montserrat;
+      font-size: 12px;
+      font-weight: $regular;
+      color: #9f9f9f;
+    }
+  }
+  select{
+    font-family: $font-Montserrat;
+    font-size: 12px;
+    font-weight: $regular;
+  }
+  label {
+    font-family: $font-Montserrat;
+    font-size: 9px;
+    letter-spacing: 0.36px;
+    font-weight: $light;
+    color: #19191940;
+    position: absolute;
+    top: -10px;
+    left: 10px;
+    letter-spacing: 1px;
+    background-color: #fff;
+    padding: 3px;
+  }
+  
   hr {
     border: 0;
     border-top: 1px solid #eeeeee;
@@ -415,17 +473,6 @@
   }
   .err {
     border: 1px solid #ab1e56 !important;
-  }
-  label {
-    position: absolute;
-    top: -10px;
-    left: 10px;
-    font-weight: 100;
-    font-size: 10px;
-    color: $formLabel;
-    letter-spacing: 1px;
-    background-color: #fff;
-    padding: 3px;
   }
   .rtcinfo {
     font-size: 11px;
@@ -745,4 +792,34 @@
     }
 
   }
+}
+
+.updated{
+  background-color: #9F9F9F;
+  height: 60px;
+  width: 100%;
+  @include b3_14px_montserrat_white();
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  outline: none;
+  border: 2px solid #9f9f9f;
+}
+
+.update-details{
+  background-color: #4c4c4c;
+  border: 2px solid #4c4c4c;
+  letter-spacing: 0.5px;
+  @include b3_14px_montserrat_white();
+  height: 60px;
+  width: 100%;
+  text-transform: uppercase;
+  outline: none;
+  &:hover{
+    color: #4c4c4c;
+    background-color: #FFF;
+  }
+}
+
+.error-msg{
+  @include err_13px_lora_italic_cerise();
 }
